Creating Header component with image and home icon. Creating hoc to wrap components with header and footer (FIX home icon is not working)

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   justify-content: center;
   height: 100vh;
   min-width: 100%;
-  background-color: #f0f0f0;
+  background-color: #fff;
 }
 
 video {
